# VisionGuard-Safety-AI

./: .gitattributes  .gitignore  Dockerfile  README.md  VisionGuard-Safety-AI.md  app.py  pyproject.toml  requirements.txt
.claude/: launch.json
configs/: calibration.json  config.yaml  zones.json
outputs/: events.db
scripts/: benchmark.py  calibrate_camera.py  define_zones.py  download_assets.py  reid_demo.py  run_pipeline.py  train_temporal.py
src/visionguard/: __init__.py  pipeline.py
src/visionguard.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/visionguard/assistant/: __init__.py  assistant.py  indexer.py
src/visionguard/dashboard/: __init__.py  app.py
src/visionguard/detection/: __init__.py  detector.py  pose.py  types.py
src/visionguard/reid/: __init__.py  embedder.py  gallery.py
src/visionguard/reporting/: __init__.py  pdf.py
src/visionguard/safety/: __init__.py  events.py  falls.py  ppe.py  proximity.py  risk.py  zones.py
src/visionguard/spatial/: __init__.py  homography.py
src/visionguard/storage/: __init__.py  event_store.py
src/visionguard/temporal/: __init__.py  features.py  model.py  synthetic.py
src/visionguard/tracking/: __init__.py  tracker.py
src/visionguard/utils/: __init__.py  config.py  drawing.py  logger.py  video.py
tests/: test_assistant.py  test_config.py  test_detection_types.py  test_event_store.py  test_falls.py  test_ppe.py  test_proximity.py  test_reid.py  test_reporting.py  test_risk.py  test_spatial.py  test_temporal.py  test_zones.py
