[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "visionguard"
version = "0.1.0"
description = "Real-time computer vision platform for workplace safety, PPE compliance, and hazard intelligence"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Mohamed Amin" }]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
